# -ivern

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py  requirements.txt
app/core/: sheet.py
app/db/: database.py  models.py
app/domain/: chapter.py  gatcha.py
core/: sheet.py
domain/: gatcha.py
